# score-test

./: CMakeLists.txt  README.md  update_vs_project.bat
docs/: BUILD_README.md  project_analysis.md
src/: Debug.hpp  Vec2.hpp  main.cpp
src/Game/: CommandManager.cpp  CommandManager.hpp  EventLogSystem.cpp  EventLogSystem.hpp  EventLogger.cpp  EventLogger.hpp  EventSystemManager.cpp  EventSystemManager.hpp  FileCommandSource.cpp  FileCommandSource.hpp  GameLogic.cpp  GameLogic.hpp  ICommandSource.hpp  IExternalEventSystem.hpp  ManagerBase.cpp  ManagerBase.hpp  MapManager.cpp  MapManager.hpp  WorldManager.cpp  WorldManager.hpp
src/Game/ECS/: BehaviourImplementations.cpp  BehaviourSystem.cpp  BehaviourSystem.hpp  Component.hpp  Components.hpp  DeathSystem.cpp  DeathSystem.hpp  Entity.cpp  Entity.hpp  EventLogSystem.cpp  IExternalEventSystem.hpp  MapService.cpp  MapService.hpp  PositionSystem.cpp  PositionSystem.hpp  System.hpp  SystemBase.hpp  World.cpp  World.hpp  WorldHelper.cpp  WorldHelper.hpp
src/IO/Commands/: CreateMap.hpp  ICommand.hpp  March.hpp  SpawnHunter.hpp  SpawnSwordsman.hpp
src/IO/Events/: MapCreated.hpp  MarchEnded.hpp  MarchStarted.hpp  UnitAttacked.hpp  UnitDied.hpp  UnitMoved.hpp  UnitSpawned.hpp
src/IO/System/: CommandParser.cpp  CommandParser.hpp  EventLog.hpp  PrintDebug.hpp
src/IO/System/details/: CommandParserVisitor.hpp  PrintFieldVisitor.hpp
